# XiongdiMajiangGameServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
schema/: card.fbs  card_generated.h  cards.fbs  cards_generated.h
sources/: GameLobby.cpp  GameLobby.h  GlobalDefines.h  GlobalEnums.h  GlobalMaps.h  Player.cpp  Player.h  Room.cpp  Room.h  Tile.cpp  Tile.h  utils.cpp  utils.h
